[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/GUI.gd" type="Script" id=1]
[ext_resource path="res://UI/AmmoPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/HealthPanel.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.67451, 0.12549, 0.12549, 1 )
skew = Vector2( 0.9, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.101961, 0.101961, 0.0980392, 1 )
skew = Vector2( 0.9, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.662745, 0.545098, 0.168627, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.67451, 0.12549, 0.12549, 1 )
skew = Vector2( 0.9, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.101961, 0.101961, 0.0980392, 1 )
skew = Vector2( 0.9, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.662745, 0.545098, 0.168627, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.67451, 0.12549, 0.12549, 1 )
skew = Vector2( 0.9, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 3.0
expand_margin_bottom = 3.0

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.101961, 0.101961, 0.0980392, 1 )
skew = Vector2( 0.9, 0 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.662745, 0.545098, 0.168627, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_right = 5.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 1, 1, 1, 0.6 )
shadow_size = 3

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -50.0
margin_bottom = -100.0

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1850.0
margin_bottom = 960.0

[node name="Top" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_right = 1850.0
margin_bottom = 280.0
size_flags_vertical = 3

[node name="Mid" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 284.0
margin_right = 1850.0
margin_bottom = 564.0
size_flags_vertical = 3

[node name="Bot" type="HBoxContainer" parent="MarginContainer/Rows"]
margin_top = 568.0
margin_right = 1850.0
margin_bottom = 960.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Rows/Bot"]
margin_right = 1850.0
margin_bottom = 392.0
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Rows/Bot/MarginContainer"]
margin_right = 1850.0
margin_bottom = 392.0
custom_styles/panel = SubResource( 1 )

[node name="PartyRows" type="VBoxContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer"]
margin_right = 1850.0
margin_bottom = 392.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows"]
margin_right = 1850.0
margin_bottom = 128.0

[node name="Party1" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 300.0

[node name="HealthBar" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer/Party1/HealthPanel/Health/VBoxContainer" index="1"]
custom_styles/fg = SubResource( 8 )
custom_styles/bg = SubResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer"]
margin_left = 304.0
margin_right = 1850.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="Panel1Tween" type="Tween" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer"]

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows"]
margin_top = 132.0
margin_right = 1850.0
margin_bottom = 260.0

[node name="Party2" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer2" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 300.0

[node name="HealthBar" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer2/Party2/HealthPanel/Health/VBoxContainer" index="1"]
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer2"]
margin_left = 304.0
margin_right = 1850.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="Panel2Tween" type="Tween" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer2"]

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows"]
margin_top = 264.0
margin_right = 1850.0
margin_bottom = 392.0

[node name="Party3" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer3" instance=ExtResource( 4 )]
anchor_right = 0.0
margin_right = 300.0

[node name="HealthBar" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer3/Party3/HealthPanel/Health/VBoxContainer" index="1"]
custom_styles/fg = SubResource( 6 )
custom_styles/bg = SubResource( 7 )

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer3"]
margin_left = 304.0
margin_right = 1850.0
margin_bottom = 128.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0

[node name="Panel3Tween" type="Tween" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer3"]

[node name="AmmoPanel" type="VBoxContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer"]
margin_right = 1850.0
margin_bottom = 392.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel"]
margin_top = 196.0
margin_right = 1850.0
margin_bottom = 392.0
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer"]
margin_right = 1326.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0

[node name="AmmoPanel" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 1330.0
margin_right = 1850.0
margin_bottom = 196.0

[node name="WeaponFrame" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel" index="0"]
margin_right = 520.0
margin_bottom = 196.0

[node name="WeaponFrameHead" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/WeaponFrame" index="0"]
margin_left = 0.0
margin_right = 255.0
margin_bottom = 196.0

[node name="WeaponFrameFade" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/WeaponFrame" index="1"]
margin_left = 255.0
margin_right = 490.0
margin_bottom = 196.0

[node name="ReloadPanel" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/WeaponFrame" index="2"]
margin_left = 490.0
margin_right = 520.0
margin_bottom = 196.0

[node name="CenterContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/WeaponFrame/ReloadPanel" index="0"]
margin_bottom = 30.0

[node name="ReloadBar" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/WeaponFrame/ReloadPanel" index="1"]
margin_top = 34.0
margin_bottom = 184.0
grow_horizontal = 0
grow_vertical = 0

[node name="CenterContainer2" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/WeaponFrame/ReloadPanel" index="2"]
margin_top = 188.0
margin_bottom = 196.0

[node name="CenterContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel" index="1"]
margin_right = 520.0
margin_bottom = 196.0

[node name="AmmoCountCont" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel" index="2"]
margin_right = 520.0
margin_bottom = 196.0

[node name="AmmoCount" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont" index="0"]
margin_right = 491.0
margin_bottom = 196.0

[node name="Spacer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont/AmmoCount" index="0"]
margin_right = 491.0
margin_bottom = 27.0

[node name="HBoxContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont/AmmoCount" index="1"]
margin_top = 31.0
margin_right = 491.0
margin_bottom = 196.0

[node name="CenterContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont/AmmoCount/HBoxContainer" index="0"]
margin_right = 322.0
margin_bottom = 165.0

[node name="HBoxContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont/AmmoCount/HBoxContainer" index="1"]
margin_left = 322.0
margin_right = 470.0
margin_bottom = 165.0

[node name="CurrentAmmo" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont/AmmoCount/HBoxContainer/HBoxContainer" index="0"]
margin_top = 41.0
margin_right = 40.0
margin_bottom = 123.0

[node name="Seperate" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont/AmmoCount/HBoxContainer/HBoxContainer" index="1"]
margin_left = 44.0
margin_top = 41.0
margin_right = 104.0
margin_bottom = 123.0

[node name="MaxAmmo" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont/AmmoCount/HBoxContainer/HBoxContainer" index="2"]
margin_left = 108.0
margin_top = 41.0
margin_right = 148.0
margin_bottom = 123.0

[node name="CenterContainer2" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont/AmmoCount/HBoxContainer" index="2"]
margin_left = 470.0
margin_right = 491.0
margin_bottom = 165.0

[node name="CenterContainer" parent="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel/AmmoCountCont" index="1"]
margin_left = 495.0
margin_right = 520.0
margin_bottom = 196.0

[editable path="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer/Party1"]
[editable path="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer2/Party2"]
[editable path="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/PartyRows/HBoxContainer3/Party3"]
[editable path="MarginContainer/Rows/Bot/MarginContainer/PanelContainer/AmmoPanel/HBoxContainer/AmmoPanel"]
